Added docstrings in test files and api files

--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,9 @@ envlist = py37,flake8
 setenv = PYTHONPATH = {toxinidir}/python_api
 deps = 
   pytest
+  pytest-testdox
   flask
 commands = pytest --basetemp="{envtmpdir}" {posargs}
+
+[pytest]
+addopts = --testdox
